<resources>
    <string name="app_name">Handy Pro</string>
    <string name="bullet">⋅</string>
    <string name="dash">\u2013</string>
    <string name="no_data">--</string>
    <string name="none">None</string>
    <string name="time_interval_formatted">%1$s – %2$s</string>
    <string name="two_lines_formatted">%1$s\n%2$s</string>
    <string name="comma_formatted">%1$s, %2$s</string>
    <string name="dash_formatted">%1$s \u2013 %2$s</string>
    <string name="dash_formatted_numbers">%1$d \u2013 %2$d</string>
    <string name="colon_formatted">%1$s: %2$s</string>
    <string name="space_formatted">%1$s %2$s</string>
    <string name="exclamation_point">!</string>
    <string name="parentheses_formatted">(%1$s)</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_single_word">Continue</string>
    <string name="remove">Remove</string>
    <string name="keep">Keep</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="reschedule">Reschedule</string>
    <string name="great_work">Great work!</string>
    <string name="no_thanks">No Thanks</string>
    <string name="yes_please">Yes, Please</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="send_message">Send Message</string>
    <string name="set_my_availability">Set My Availability</string>
    <string name="select_environment">Select Environment</string>
    <string name="local">Local</string>
    <string name="namespace">Namespace</string>
    <string name="env_modifier_dialog_title_namespace">Enter Namespace</string>
    <string name="env_modifier_dialog_title_domain">Enter Domain or IP Address</string>
    <string name="env_modifier_dialog_input_hint_namespace">e.g. test01</string>
    <string name="env_modifier_dialog_input_hint_domain">e.g. localhost or 127.0.0.1</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="build_version_formatted">v%1$s</string>
    <string name="software_licenses">Software Licenses</string>
    <string name="phone_number_hint">Cell Phone Number</string>
    <string name="pin_code_hint">PIN Code</string>
    <string name="request_pin">Get PIN Code</string>
    <string name="request_slt">Send Login Link</string>
    <string name="request_slt_again">Resend Login Link</string>
    <string name="professional_portal">Professional Portal</string>
    <string name="login_instructions_1">Log in to Handy</string>
    <string name="login_instructions_2">We sent a 6-digit PIN code to %1$s and your email.\nEnter it below:</string>
    <string name="login_instructions_slt">Enter your phone number and we\'ll text you a magic login link.</string>
    <string name="login_instructions_slt2">We sent a login link to %1$s. Tap below to try again</string>
    <string name="sending_pin">Sending PIN code…</string>
    <string name="logging_in">Logging in…</string>
    <string name="login_need_help"><u>I need help logging in</u></string>
    <string name="instructions">Instructions</string>
    <string name="login_help">Phone number entered must match the number registered to your account. If you are experiencing difficulty, please visit our <a href="#">Help Center</a>.</string>
    <string name="login_error_bad_phone">Your phone number was not recognized</string>
    <string name="login_error_bad_login">Login failed. Please make sure your phone and PIN code are correct.</string>
    <string name="login_error_connectivity">The login server could not be reached, please try again</string>
    <string name="error_no_intent_handler_found">No application found to handle the requested action</string>
    <string name="error_connectivity">The server could not be reached, please ensure you have a data connection and try again</string>
    <string name="your_job">Your Job</string>
    <string name="claim">Claim</string>
    <string name="claimed">Claimed</string>
    <string name="claim_job">Claim Job</string>
    <string name="upgrade_job">Upgrade Job</string>
    <string name="confirm_claim">Confirm Claim</string>
    <string name="confirm_upgrade">Confirm Upgrade</string>
    <string name="review_your_update">Review your job update</string>
    <string name="claim_series">Claim Series</string>
    <string name="on_my_way">On My Way</string>
    <string name="job_claim_success">Success! Job claimed!</string>
    <string name="series_claim_success">Success! Series claimed!</string>
    <string name="job_remove_success">You have cancelled this job.</string>
    <string name="series_remove_success">Success! Series removed!</string>
    <string name="send_verification_success">Your income verification has been sent.</string>
    <string name="send_verification_failed">Oops! There was an error sending your income verification. Please try again.</string>
    <string name="request_payments_batches_failed">Oops! There was an error loading your payments.</string>
    <string name="help">Help</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="loading_more_payments">Loading more payments…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="address">Address</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="update_header">Time for an update!</string>
    <string name="update_copy">Please install the update to continue using Portal.</string>
    <string name="update_button_label">Install Update</string>
    <string name="download_copy">Downloading update. Please wait…</string>
    <string name="issues_manual_download">Having issues updating the app? \n<a href="https://www.handy.com/p">Click here</a> to download directly from Handy.</string>
    <string name="allow_external_storage_write_title">Important update</string>
    <string name="allow_external_storage_write_message">Select “Allow” on the next screen in order to download the latest version of the Handy Pro Portal.</string>
    <string name="allow_external_storage_write_button">OK</string>
    <string name="grant_access_copy">Handy Pro Portal needs access to download the latest and greatest.</string>
    <string name="grant_access_button">Grant Access</string>
    <string name="app_update">Handy Pro Update</string>
    <string name="error_update_failed_download_manager_disabled">Update failed. Please enable Download Manager.</string>
    <string name="error_update_failed_unwritable">Update failed. Your external storage is not writable. Please make sure USB storage mode is off.</string>
    <string name="app_update_later_button">Update Later</string>
    <string name="tab_claim">Claim</string>
    <string name="tab_clients">Clients</string>
    <string name="tab_schedule">Schedule</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_more">More</string>
    <string name="title_activity_please_update">PleaseUpdateActivity</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="available_job">Available Job</string>
    <string name="scheduled_jobs">Scheduled Jobs</string>
    <string name="scheduled_job">Scheduled Job</string>
    <string name="block_jobs_schedule">Block Jobs Schedule</string>
    <string name="time_window_formatted">%1$s \u2013 %2$s hour job</string>
    <string name="payment_value">%s</string>
    <string name="payments">Payments</string>
    <string name="payments_details">Payment Details</string>
    <string name="bonus_payment_value">+ %s REWARD</string>
    <string name="supplies">Supplies</string>
    <string name="full_details_and_more_available_on_date"><![CDATA[Full job details, including exact address, will be available on <b>%1$s</b>. We\u2019ll send you a reminder at that time.]]></string>
    <string name="full_details_and_more_available_on_date_flex"><![CDATA[Depending on the specific customer details you receive, this job may be a minimum of <b>%1$s</b> hours up to a maximum of <b>%2$s</b> hours. The job will not start prior to <b>%3$s</b> and will not end after <b>%4$s</b>. Exact customer and booking details will be sent by 1 hour before job start.<br/><br/>Job payment depends on the number of hours of the booking you receive. It will be minimum <b>%5$s</b> for a <b>%6$s</b> hour booking and maximum <b>%7$s</b> for a <b>%8$s</b> hour booking.]]></string>
    <string name="no_available_jobs">Sorry, there aren\'t any available jobs left for this day.</string>
    <string name="no_pro_requested_jobs">You don\'t have any new job requests.</string>
    <string name="customer_favorite_pro">You\'re this customer\'s Favorite Pro</string>
    <string name="error_fetching_available_jobs">There was an error fetching your available jobs.</string>
    <string name="error_fetching_scheduled_jobs">There was an error fetching your scheduled jobs.</string>
    <string name="error_fetching_matching_jobs">There was an error searching for matching jobs.</string>
    <string name="error_fetching_booking_details">There was an error fetching your booking details.</string>
    <string name="notification_blocker_title">Please turn on push notifications</string>
    <string name="notification_blocker_body">We use push notifications to send you changes to your schedule, payment updates and more. Please tap below to turn on push notifications.</string>
    <string name="enable_now">Enable Now</string>
    <string name="ratings_and_feedback">Ratings &amp; Feedback</string>
    <string name="video_library">Video Library</string>
    <string name="earn_more_money">Earn More Money</string>
    <string name="account_settings">Account Settings</string>
    <string name="need_to_cancel">Are you sure you need to cancel?</string>
    <string name="keep_rate">Keep rate</string>
    <string name="keep_rate_negatively_impacted">Your keep rate will be negatively impacted.</string>
    <string name="no_keep_rate">Not enough data</string>
    <string name="upload_photo_title">Make a great first impression</string>
    <string name="upload_photo_subtitle">Upload a profile photo to help us introduce you to your future\u00a0customers.</string>
    <string name="upload_photo_camera_option">Take photo</string>
    <string name="upload_photo_dos_title">Do</string>
    <string name="upload_photo_dos_1">Bright lighting</string>
    <string name="upload_photo_dos_2">Plain background</string>
    <string name="upload_photo_dos_3">Dress professionally</string>
    <string name="upload_photo_dos_4"><![CDATA[Straight on & smile]]></string>
    <string name="upload_photo_donts_title">Don\'t</string>
    <string name="upload_photo_donts_1">Use filters</string>
    <string name="upload_photo_donts_2">Make faces</string>
    <string name="upload_photo_donts_3">Wear hats</string>
    <string name="upload_photo_donts_4">Work angles</string>
    <string name="sunday_initial">S</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
</resources>