<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.handy.portal.core.ui.element.ProHeaderView
            android:id="@+id/more_pro_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            />

        <TextView
            android:id="@+id/more_ratings_and_feedback"
            style="@style/ListItem"
            android:drawableLeft="@drawable/ic_cup_gray"
            android:drawableStart="@drawable/ic_cup_gray"
            android:text="@string/ratings_and_feedback"
            />

        <TextView
            android:id="@+id/more_payments"
            style="@style/ListItem"
            android:drawableLeft="@drawable/ic_tray_wallet"
            android:drawableStart="@drawable/ic_tray_wallet"
            android:text="@string/payments"
            />

        <TextView
            android:id="@+id/more_refer_a_friend"
            style="@style/ListItem"
            android:drawableLeft="@drawable/tray_refer_a_friend"
            android:drawableStart="@drawable/tray_refer_a_friend"
            android:text="@string/earn_more_money"
            />

        <TextView
            android:id="@+id/more_account_settings"
            style="@style/ListItem"
            android:drawableLeft="@drawable/tray_account_settings"
            android:drawableStart="@drawable/tray_account_settings"
            android:text="@string/account_settings"
            />

        <TextView
            android:id="@+id/more_video_library"
            style="@style/ListItem"
            android:drawableLeft="@drawable/tray_video_library"
            android:drawableStart="@drawable/tray_video_library"
            android:text="@string/video_library"
            />

        <TextView
            android:id="@+id/more_help"
            style="@style/ListItem"
            android:drawableLeft="@drawable/ic_lifesaver"
            android:drawableStart="@drawable/ic_lifesaver"
            android:text="@string/help"
            />
    </LinearLayout>
</ScrollView>
