<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_to_cancel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_rate_negatively_impacted"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_rate"
            />

        <TextView
            android:id="@+id/old_keep_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="88%"
            />

        <TextView
            android:id="@+id/new_keep_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="87%"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/no_keep_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_keep_rate"
        android:visibility="gone"
        />
</LinearLayout>
