<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/take_photo_button"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            >

            <TextView
                style="@style/TextView.XLarge.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_photo_title"
                />

            <TextView
                style="@style/TextView.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center"
                android:padding="@dimen/default_padding_half"
                android:text="@string/upload_photo_subtitle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/img_good_selfie"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingStart="@dimen/default_padding"
                    >

                    <TextView
                        style="@style/TextView.Medium.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_dos_title"
                        android:textColor="@color/handy_green"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_dos_1"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_dos_2"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_dos_3"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_dos_4"
                        />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/border_gray"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/img_bad_selfie"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingStart="@dimen/default_padding"
                    >

                    <TextView
                        style="@style/TextView.Medium.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_donts_title"
                        android:textColor="@color/error_red"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_donts_1"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_donts_2"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_donts_3"
                        />

                    <TextView
                        style="@style/TextView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/extra_margin"
                        android:text="@string/upload_photo_donts_4"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/take_photo_button"
        style="@style/Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/upload_photo_camera_option"
        />
</RelativeLayout>
