<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:id="@+id/tabs"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            android:weightSum="50"
    >

    <RadioButton
        android:id="@+id/button_jobs"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:drawableTop="@drawable/tab_button_claim"
        android:text="@string/tab_claim"
        />

    <RadioButton
        android:id="@+id/button_schedule"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:checked="false"
        android:drawableTop="@drawable/tab_button_schedule"
        android:text="@string/tab_schedule"
        />

    <RadioButton
        android:id="@+id/button_notifications"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="15"
        android:checked="false"
        android:drawableTop="@drawable/tab_button_notifications"
        android:text="@string/tab_notifications"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        ></LinearLayout>

    <RadioButton
        android:id="@+id/button_more"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:drawableTop="@drawable/tab_button_nav_more"
        android:text="@string/tab_more"
        />

</RadioGroup>
